fix: adjust alignment for privacy checkbox on small screens to improve layout responsiveness

--- a/src/styles/components/_checkbox.scss
+++ b/src/styles/components/_checkbox.scss
@@ -116,7 +116,9 @@
 	}
 
 	&--privacy {
-		align-items: flex-start;
+		@include media-breakpoint-down(sm) {
+			align-items: flex-start;
+		}
 
 		.checkbox__box {
 			@include media-breakpoint-up(md) {
